[package]
name = "riscv-process-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpr"
path = "src/main.rs"

[[sublib]]
name = "rprlib"
path = "src/lib.rs"
crate-type = ["lib"]

[[sublib]]
name = "rprpylib"
path = "src/pylib.rs"
crate-type = ["cdylib"]

[dependencies]
pest = "^2.1.*"
pest_derive = "^2.1.*"
serde = { version = "^1.0.*", features = ["derive"] }
serde_json = "^1.0.*"
