[package]
name = "riscv-process-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpr"
path = "src/main.rs"

[lib]
name = "rprlib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
pest = "^2.1.*"
pest_derive = "^2.1.*"
serde = { version = "^1.0.*", features = ["derive"] }
serde_json = "^1.0.*"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]