[package]
name = "riscv-process-rs"
license = "MIT"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

description = "A RISC-V assembly parser and process library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpr"
path = "src/main.rs"

[lib]
name = "rprlib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
pest = "^2.1.*"
pest_derive = "^2.1.*"
serde = { version = "^1.0.*", features = ["derive"] }
serde_json = "^1.0.*"

[dependencies.pyo3]
version = "^0.13.*"
features = ["extension-module"]